# RecFLS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README  README.md  RecFLS.kdev4  config.ini  config2.ini  cpu_pairs.txt
cmake/: FindG2O.cmake
src/: main.cpp  recfls.cpp  recfls.h  recfls.ui
src/common/: Common.h  FLFrame.cpp  FLFrame.h  Frame.cpp  Frame.h  ImuFrame.cpp  ImuFrame.h  Parameters.cpp  Parameters.h  RelInformation.cpp  RelInformation.h
src/controller/: Controller.cpp  Controller.h  DefaultController.cpp  DefaultController.h  FrameStepController.cpp  FrameStepController.h
src/cuda/: CudaInternal.h  CudaPointCloud.cu  FusedLine.cu  FusedLineInternal.h  Icp.cu  IcpInternal.h  cov.cu  cov.h  cuda.h  cuda.hpp  cutil_math2.h  eig.cu  eig.h
src/device/: Device.cpp  Device.h  IclNuimDevice.cpp  IclNuimDevice.h  SensorReaderDevice.cpp  SensorReaderDevice.h
src/extractor/: BoundaryExtractor.cpp  BoundaryExtractor.h  DDBPLineExtractor.cpp  DDBPLineExtractor.h  EDLine3DExtractor.h  EDLine3DExtractor.hpp  EDLines.cpp  EDLines.h  FusedLineExtractor.cpp  FusedLineExtractor.h  LineCluster.cpp  LineCluster.h  LineExtractor.cpp  LineExtractor.h  LineExtractor.hpp  LineSegment.cpp  LineSegment.h  LineTreeNode.cpp  LineTreeNode.h
src/matcher/: DDBPLineMatcher.cpp  DDBPLineMatcher.h  ICPMatcher.cpp  ICPMatcher.h  LineMatcher.cpp  LineMatcher.h
src/odometry/: ICPOdometry.cpp  ICPOdometry.h  LineMatchOdometry.cpp  LineMatchOdometry.h  linematchcudaodometry.cpp  linematchcudaodometry.h  odometry.cpp  odometry.h
src/ui/: CloudViewer.cpp  CloudViewer.h  CloudViewerCellPicker.cpp  CloudViewerCellPicker.h  ImageViewer.cpp  ImageViewer.h  LineViewer.cpp  LineViewer.h  LineViewer.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreferencesWindow.cpp  PreferencesWindow.h  PreferencesWindow.ui  ToolWindowBoundaryExtractor.cpp  ToolWindowBoundaryExtractor.h  ToolWindowBoundaryExtractor.ui  ToolWindowFusedLineExtractor.cpp  ToolWindowFusedLineExtractor.h  ToolWindowFusedLineExtractor.ui  ToolWindowICPMatcher.cpp  ToolWindowICPMatcher.h  ToolWindowICPMatcher.ui  ToolWindowLineExtractor.cpp  ToolWindowLineExtractor.h  ToolWindowLineExtractor.ui  ToolWindowLineMatcher.cpp  ToolWindowLineMatcher.h  ToolWindowLineMatcher.ui  vtkImageMatSource.cpp  vtkImageMatSource.h
src/util/: StopWatch.cpp  StopWatch.h  Utils.cpp  Utils.h
